(#132) fixed inpage-nav links, fixed text-inputs color contrast

--- a/packages/text-inputs/src/sass/_module.scss
+++ b/packages/text-inputs/src/sass/_module.scss
@@ -44,7 +44,7 @@
  * - :disabled/[disabled]
  */
 .uikit-text-input {
-	border: 2px solid $uikit-colour-Border-40;
+	border: 2px solid $uikit-colour-Border-80;
 	padding: uikit-space( 0.25 );
 	font-size: 16px;
 	font-family: $uikit-font-system;
@@ -62,26 +62,38 @@
 
 	&:invalid {
 		border: 2px solid $uikit-colour-Error;
+
+		&:focus {
+			background-color: $uikit-colour-Error-10;
+		}
 	}
 
 	&.uikit-text-input--invalid {
 		border: 2px solid $uikit-colour-Error;
+
+		&:focus {
+			background-color: $uikit-colour-Error-10;
+		}
 	}
 
 	&.uikit-text-input--valid {
-		border: 2px solid $uikit-colour-Success-80;
+		border: 2px solid $uikit-colour-Success;
+
+		&:focus {
+			background-color: $uikit-colour-Success-10;
+		}
 	}
 
 	&:disabled {
 		cursor: not-allowed;
 		background: $uikit-colour-Background;
-		border-color: transparent;
+		color: $uikit-colour-Text-80;
 	}
 
 	&[disabled] {
 		cursor: not-allowed;
 		background: $uikit-colour-Background;
-		border-color: transparent;
+		color: $uikit-colour-Text-80;
 	}
 }
 
